--- a/Galaga/Galaga.vcxproj
+++ b/Galaga/Galaga.vcxproj
@@ -88,8 +88,8 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>C:\Users\montserratmc6\Downloads\raylib\raylib\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\montserratmc6\Downloads\raylib\raylib\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\monts\Downloads\raylib %281%29\raylib\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\monts\Downloads\raylib %281%29\raylib\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
