--- a/Galaga/Galaga.vcxproj
+++ b/Galaga/Galaga.vcxproj
@@ -26,6 +26,7 @@
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="space.cpp" />
     <ClCompile Include="transicion.cpp" />
+    <ClCompile Include="UI.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bullet.hpp" />
@@ -34,6 +35,7 @@
     <ClInclude Include="Menu.hpp" />
     <ClInclude Include="space.hpp" />
     <ClInclude Include="transicion.hpp" />
+    <ClInclude Include="UI.hpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
