--- a/Galaga/Galaga.vcxproj
+++ b/Galaga/Galaga.vcxproj
@@ -94,8 +94,8 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>C:\Users\aidanag\Downloads\raylib %281%29\raylib\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\aidanag\Downloads\raylib %281%29\raylib\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\monts\Downloads\raylib %281%29\raylib\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\monts\Downloads\raylib %281%29\raylib\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ExternalIncludePath>C:\Users\monts\Downloads\raylib %281%29\raylib\include;$(ExternalIncludePath)</ExternalIncludePath>
